--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,7 @@
 .about-card {
     background-color:beige;
     border-radius: 50px;
-    max-width: 90vw;
+    max-width: 80vw;
     margin-left: auto;
     margin-right: auto;
 }
@@ -15,18 +15,37 @@
     padding-top: 2rem;
 }
 
-.about-image {
+
+.about-image1 {
+    max-width: 400px;
+    height:auto;
+    border-radius: 50px;
+    margin: 2rem;
+    transform: rotate(-2deg);
+    box-shadow: black 2px 2px;
+}
+
+.about-image2 {
     max-width: 400px;
     border-radius: 50px;
-    padding: 2rem;
+    margin: 2rem;
+    transform: rotate(2deg);
 }
 
 .about-container {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .about-paragraphs {
     max-width: 400px;
-    padding: 2rem
+    padding: 2rem;
+    font-family: monospace;
+    font-size: 20px;
+    text-align: justify;
+}
+
+.about-images {
+    display: block;
 }
