--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -22,14 +22,15 @@
     border-radius: 50px;
     margin: 2rem;
     transform: rotate(-2deg);
-    box-shadow: black 2px 2px;
+    box-shadow: black 5px 5px;
 }
 
 .about-image2 {
     max-width: 400px;
     border-radius: 50px;
     margin: 2rem;
-    transform: rotate(2deg);
+    transform: rotate(0.5deg);
+    box-shadow: black 5px 5px;
 }
 
 .about-container {
@@ -40,12 +41,9 @@
 
 .about-paragraphs {
     max-width: 400px;
-    padding: 2rem;
-    font-family: monospace;
-    font-size: 20px;
+    margin: 2rem;
+    font-family: 'Anek Latin';
+    font-size: 22px;
     text-align: justify;
 }
 
-.about-images {
-    display: block;
-}
