--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -23,14 +23,25 @@
     margin: 2rem;
     transform: rotate(-2deg);
     box-shadow: black 5px 5px;
+    animation: tiltOut1 0.2s;
+}
+.about-image1:hover {
+    animation: tiltIn1 0.2s;
+    animation-fill-mode: forwards;
 }
 
 .about-image2 {
     max-width: 400px;
     border-radius: 50px;
     margin: 2rem;
-    transform: rotate(0.5deg);
+    transform: rotate(1deg);
     box-shadow: black 5px 5px;
+    animation: tiltOut2 0.2s;
+}
+
+.about-image2:hover {
+    animation: tiltIn2 0.2s;
+    animation-fill-mode: forwards;
 }
 
 .about-container {
@@ -47,3 +58,46 @@
     text-align: justify;
 }
 
+.project-btn:hover{
+    color: white;
+    animation: hoverShake 1s linear 3;
+}
+
+@keyframes tiltIn1 {
+    0% {
+        transform: rotate(-2deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+@keyframes tiltOut1 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(-2deg);
+    }
+}
+
+@keyframes tiltIn2 {
+    0% {
+        transform: rotate(1deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+@keyframes tiltOut2 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(1deg);
+    }
+}
