--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,13 +2,80 @@
     color:darkblue;
     text-align: center;
     font-size: 45px;
-    /* text-shadow: black 1px 1px; */
     font-family: Nunito;
     padding-top: 2rem;
 }
+
+.card {
+    padding-bottom: 2rem;
+    border-radius: 30px;
+    overflow: hidden;
+    background-color: beige;
+}
+
+.card-title {
+    font-family: 'Nunito';
+    color:darkblue;
+    font-size: 24px;
+    text-align: justify;
+}
+
+.card-text {
+    font-family: 'Anek Latin';
+    font-size: 22px;
+    text-align: justify;
+}
+
 
 .project-cards {
     display: flex;
     justify-content: space-evenly;
     margin-top: 2rem;
+}
+.project-btn {
+    color:white;
+    background-color: sienna;
+    padding:10px;
+    border:none;
+    border-radius: 3px;
+    text-decoration: none;
+    position: absolute;
+    bottom: 0.8rem;
+
+    margin-left:auto;
+    margin-right: auto;
+    left:0;
+    right:0;
+    width:8rem;
+}
+.project-btn:hover{
+    color: white;
+    animation: hoverShake 0.20s linear 3;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: white;
+}
+
+@keyframes hoverShake {
+    0% {
+        transform: skew(0deg, 0deg);
+    }
+
+    25% {
+        transform: skew(5deg, 5deg);
+    }
+
+    75% {
+        transform: skew(-5deg, -5deg);
+    }
+
+    100% {
+        transform: skew(0deg, 0deg);
+    }
 }
