--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -3,35 +3,61 @@
     margin: 0px;
 }
 
+.starcount {
+    color: white;
+    font-family: 'Anek Latin';
+    font-size: 22px;
+    position:absolute;
+    bottom: 0rem;
+    right: 1rem;
+}
+
 section {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 0rem;
+    left: 0rem;
     width: 100%;
     height: 100vh;
     overflow: hidden;
 }
-
 span{
     position: absolute;
     top: 50%;
     left: 50%;
     width: 4px;
     height: 4px;
-    background: #fff;
+    padding: 8rem;
+    background-image: linear-gradient(to bottom, white 0%, white 100%), linear-gradient(to bottom, transparent 0%, transparent 100%);
+    background-clip: content-box, padding-box;
+    /* background: radial-gradient(#fff, transparent); */
     border-radius: 50%;
-    box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1), 0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 1)  ;
     animation:  animate 3s linear infinite;
+    z-index: 1;
 }
 span::before{
     content: '';
     position: absolute;
     top: 50%;
+    left: 50%;
     transform: translateY(-50%);
     width: 300px;
     height: 1px;
-    background: linear-gradient(90deg, #fff, transparent);
+    background: linear-gradient(90deg, white, transparent);
 }
+span::after{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: linear-gradient(90deg,white, transparent);
+    box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1), 0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 1)  ;
+    
+}
+
 @keyframes animate {
     0%
     {
@@ -56,7 +82,8 @@ span:nth-child(1){
     right: 0;
     left:initial;
     animation-delay:0 ;
-    animation-duration: 1s;
+    animation-duration: 1.5s;
+    opacity: 0;
 }
 
 span:nth-child(2){
@@ -64,7 +91,8 @@ span:nth-child(2){
     right: 80px;
     left:initial;
     animation-delay:0.2s;
-    animation-duration: 3s;
+    animation-duration: 4s;
+    opacity: 0;
 }
 
 span:nth-child(3){
@@ -72,7 +100,8 @@ span:nth-child(3){
     right: 0px;
     left:initial;
     animation-delay:0.4s ;
-    animation-duration: 2s;
+    animation-duration: 3s;
+    opacity: 0;
 }
 
 span:nth-child(4){
@@ -80,7 +109,8 @@ span:nth-child(4){
     right: 180px;
     left:initial;
     animation-delay:0.6s;
-    animation-duration: 1.5s;
+    animation-duration: 2s;
+    opacity: 0;
 }
 
 span:nth-child(5){
@@ -89,6 +119,7 @@ span:nth-child(5){
     left:initial;
     animation-delay:0.8s;
     animation-duration: 2.5s;
+    opacity: 0;
 }
 
 span:nth-child(6){
@@ -97,13 +128,15 @@ span:nth-child(6){
     left:initial;
     animation-delay:1s ;
     animation-duration: 3s;
+    opacity: 0;
 }
 span:nth-child(7 ){
     top: 300px;
     right: 0px;
     left:initial;
     animation-delay:1s ;
-    animation-duration: 1.75s;
+    animation-duration: 2.5s;
+    opacity: 0;
 }
 
 span:nth-child(8){
@@ -111,7 +144,8 @@ span:nth-child(8){
     right: 700px;
     left:initial;
     animation-delay:1.4s ;
-    animation-duration: 1.25s;
+    animation-duration: 1.75s;
+    opacity: 0;
 }
 
 span:nth-child(9){
@@ -119,7 +153,8 @@ span:nth-child(9){
     right: 1000px;
     left:initial;
     animation-delay:0.75s ;
-    animation-duration: 2.25s;
+    animation-duration: 2.75s;
+    opacity: 0;
 }
 
 span:nth-child(10){
@@ -127,5 +162,6 @@ span:nth-child(10){
     right: 1000px;
     left:initial;
     animation-delay:2.75s ;
-    animation-duration: 2.25s;
+    animation-duration: 2.75s;
+    opacity: 0;
 }
